logs/dag_id=mlb_parser/run_id=manual__2023-09-15T07:00:49.848655+00:00/task_id=get_avg_high/attempt=1.log
[2023-09-15T07:01:06.616+0000] {taskinstance.py:1159} INFO - Dependencies all met for dep_context=non-requeueable deps ti=<TaskInstance: mlb_parser.get_avg_high manual__2023-09-15T07:00:49.848655+00:00 [queued]>
[2023-09-15T07:01:06.622+0000] {taskinstance.py:1159} INFO - Dependencies all met for dep_context=requeueable deps ti=<TaskInstance: mlb_parser.get_avg_high manual__2023-09-15T07:00:49.848655+00:00 [queued]>
[2023-09-15T07:01:06.623+0000] {taskinstance.py:1361} INFO - Starting attempt 1 of 2
[2023-09-15T07:01:06.631+0000] {taskinstance.py:1382} INFO - Executing <Task(PostgresOperator): get_avg_high> on 2023-09-15 07:00:49.848655+00:00
[2023-09-15T07:01:06.637+0000] {standard_task_runner.py:57} INFO - Started process 22343 to run task
[2023-09-15T07:01:06.640+0000] {standard_task_runner.py:84} INFO - Running: ['***', 'tasks', 'run', 'mlb_parser', 'get_avg_high', 'manual__2023-09-15T07:00:49.848655+00:00', '--job-id', '739', '--raw', '--subdir', 'DAGS_FOLDER/mlb_parser.py', '--cfg-path', '/tmp/tmpxaeo3933']
[2023-09-15T07:01:06.643+0000] {standard_task_runner.py:85} INFO - Job 739: Subtask get_avg_high
[2023-09-15T07:01:06.679+0000] {task_command.py:415} INFO - Running <TaskInstance: mlb_parser.get_avg_high manual__2023-09-15T07:00:49.848655+00:00 [running]> on host 2e8147b3a465
[2023-09-15T07:01:06.731+0000] {taskinstance.py:1660} INFO - Exporting env vars: AIRFLOW_CTX_DAG_OWNER='andy_hsu' AIRFLOW_CTX_DAG_ID='mlb_parser' AIRFLOW_CTX_TASK_ID='get_avg_high' AIRFLOW_CTX_EXECUTION_DATE='2023-09-15T07:00:49.848655+00:00' AIRFLOW_CTX_TRY_NUMBER='1' AIRFLOW_CTX_DAG_RUN_ID='manual__2023-09-15T07:00:49.848655+00:00'
[2023-09-15T07:01:06.733+0000] {sql.py:274} INFO - Executing: 
            SELECT
                'Name',
                'POS',
                'Team',
                'G',
                'AB',
                'H',
                'BB',
                'SO',
                'OBP',
                'SLG',
                CAST('H' AS float) / CAST('AB' AS float) AS 'Average_Bat',
                CURRENT_DATE AS 'date'
                FROM mlb_data_2023
                WHERE 'AB' > (
                    SELECT AVG('AB') FROM mlb_data_2023
                )
                ORDER BY 'AVG' DESC
                LIMIT 10;
            
[2023-09-15T07:01:06.739+0000] {base.py:73} INFO - Using connection ID 'postgres_mlb_parser_DB' for task execution.
[2023-09-15T07:01:06.746+0000] {base.py:73} INFO - Using connection ID 'postgres_mlb_parser_DB' for task execution.
[2023-09-15T07:01:06.755+0000] {sql.py:418} INFO - Running statement: 
            SELECT
                'Name',
                'POS',
                'Team',
                'G',
                'AB',
                'H',
                'BB',
                'SO',
                'OBP',
                'SLG',
                CAST('H' AS float) / CAST('AB' AS float) AS 'Average_Bat',
                CURRENT_DATE AS 'date'
                FROM mlb_data_2023
                WHERE 'AB' > (
                    SELECT AVG('AB') FROM mlb_data_2023
                )
                ORDER BY 'AVG' DESC
                LIMIT 10;
            , parameters: None
[2023-09-15T07:01:06.758+0000] {taskinstance.py:1943} ERROR - Task failed with exception
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/providers/common/sql/operators/sql.py", line 280, in execute
    output = hook.run(
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/providers/common/sql/hooks/sql.py", line 392, in run
    self._run_command(cur, sql_statement, parameters)
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/providers/common/sql/hooks/sql.py", line 423, in _run_command
    cur.execute(sql_statement)
psycopg2.errors.SyntaxError: syntax error at or near "'Average_Bat'"
LINE 13: ...      CAST('H' AS float) / CAST('AB' AS float) AS 'Average_B...
                                                              ^

[2023-09-15T07:01:06.766+0000] {taskinstance.py:1400} INFO - Marking task as UP_FOR_RETRY. dag_id=mlb_parser, task_id=get_avg_high, execution_date=20230915T070049, start_date=20230915T070106, end_date=20230915T070106
[2023-09-15T07:01:06.775+0000] {standard_task_runner.py:104} ERROR - Failed to execute job 739 for task get_avg_high (syntax error at or near "'Average_Bat'"
LINE 13: ...      CAST('H' AS float) / CAST('AB' AS float) AS 'Average_B...
                                                              ^
; 22343)
[2023-09-15T07:01:06.817+0000] {local_task_job_runner.py:228} INFO - Task exited with return code 1
[2023-09-15T07:01:06.846+0000] {taskinstance.py:2784} INFO - 0 downstream tasks scheduled from follow-on schedule check
